<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>collection.dataframes</groupId>
    <artifactId>java-collection-dataframes-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <packaging>pom</packaging>

    <name>Java Collection Dataframes</name>

    <description>Source code for talk on Java Collections and Dataframes</description>

    <url>https://github.com/mehmandarov/java-collection-dataframes</url>

    <developers>
        <developer>
            <name>Rustam Mehmandarov</name>
        </developer>

        <developer>
            <name>Donald Raab</name>
        </developer>
    </developers>

    <modules>
<!--        <module>dataframe-ec</module>-->
        <module>eclipse_collections</module>
        <module>native_java</module>
    </modules>

    <properties>
        <eclipse.collections.version>11.1.0</eclipse.collections.version>
        <jackson.dataformat.csv.version>2.14.2</jackson.dataformat.csv.version>
        <junit5.version>5.9.2</junit5.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.fork>true</maven.compiler.fork>
        <maven.compiler.verbose>true</maven.compiler.verbose>
        <maven.compiler.meminitial>2048m</maven.compiler.meminitial>
        <maven.compiler.maxmem>2048m</maven.compiler.maxmem>
    </properties>

    <build>
        <defaultGoal>clean install</defaultGoal>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.2</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.eclipse.collections</groupId>
                <artifactId>eclipse-collections-api</artifactId>
                <version>${eclipse.collections.version}</version>
            </dependency>

            <dependency>
                <groupId>org.eclipse.collections</groupId>
                <artifactId>eclipse-collections</artifactId>
                <version>${eclipse.collections.version}</version>
            </dependency>

            <dependency>
                <groupId>org.eclipse.collections</groupId>
                <artifactId>eclipse-collections-testutils</artifactId>
                <version>${eclipse.collections.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson.dataformat</groupId>
                <artifactId>jackson-dataformat-csv</artifactId>
                <version>${jackson.dataformat.csv.version}</version>
            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit5.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>
</project>
